--- a/addWindow.html
+++ b/addWindow.html
@@ -9,7 +9,18 @@
         <form>
             <div>
                 <label>Select a crypto to watch</label>
-                <input type="text" id="crypto" autofocus>
+            </div>
+            <div class="input-field col s12">
+                <select class="browser-default" id="crypto" name="crypto">
+                    <option value="">Choose crypto</option>
+                    <option value="bitcoin">Bitcoin</option>
+                    <option value="ethereum">Ethereum</option>
+                    <option value="ripple">Ripple</option>
+                    <option value="bitcoincash">Bitcoin Cash</option>
+                    <option value="cardano">Cardano</option>
+                    <option value="lightcoin">Lightcoin</option>
+                    <option value="stellar">Stellar Lumens</option>
+                </select>
             </div>
             <button class="btn waves-effect waves-light" type="submit">Add</button>
         </form>
