--- a/mainWindow.html
+++ b/mainWindow.html
@@ -14,21 +14,16 @@
         const electron = require('electron');
         const {ipcRenderer} = electron;
         const ul = document.querySelector('ul');
-        let price = require('crypto-price')
-        const CoinGecko = require('coingecko-api');
-        const CoinGeckoClient = new CoinGecko();
-
-        //Crypto API
-        function callAPI(currency, crypto) {
-            price.getCryptoPrice(currency, crypto).then(obj => { // Base for ex - USD, Crypto for ex - ETH 
-                console.log(obj.price);
-            }).catch(err => {
-                console.log(err)
-            })
+        
+        //API
+        let price = require('crypto-price')    
+        function callAPI(currency, crypto)  { 
+        return price.getCryptoPrice(currency, crypto).then(obj => { // currency for ex - USD, crypto for ex - ETH
+            return obj.price;
+        }).catch(err => {
+            console.log(err)
+        })
         }
-
-        console.log(callAPI('USD','ETH'));
-        console.log(hello());
 
         //Catch add crypto
         ipcRenderer.on('crypto:add', function(e, crypto){
@@ -36,9 +31,12 @@
             const li = document.createElement('li');
             li.className = 'custom-li collection-item';
             const cryptoText = document.createTextNode(crypto);
-            const cryptoPrice = document.createTextNode(callAPI('USD', ''))
+            //Adding the price using the API
+            callAPI('USD','ETH').then(result => {
+                const cryptoPrice = document.createTextNode(result)
+                li.appendChild(cryptoPrice);
+            });
             li.appendChild(cryptoText);
-            li.appendChild(cryptoPrice);
             ul.appendChild(li);
         });
 
