--- a/addWindow.html
+++ b/addWindow.html
@@ -20,7 +20,7 @@
                     <option value="bch">Bitcoin Cash</option>
                     <option value="ada">Cardano</option>
                     <option value="ltc">Lightcoin</option>
-                    <option value="stellar">Stellar Lumens</option>
+                    <option value="xlm">Stellar Lumens</option>
                 </select>
             </div>
             <button class="custom-add-button btn waves-effect waves-light" type="submit">Add</button>
