--- a/mainWindow.html
+++ b/mainWindow.html
@@ -10,10 +10,6 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="col s1">1</div>
-        <div class="col s1">2</div>
-    </div>
     <!-- List where crypto adds with the functions below-->
     <ul></ul>
     <script>        
@@ -28,8 +24,15 @@
             li.className = 'custom-li collection-item';
             //Adding the price using the API from crypto_api_js
             callAPI('USD', crypto).then(result => {
-                li.innerHTML = (`<div class='crypto-in-watchlist'><h4>${crypto_names(crypto)}</h4><h5>$${result}</h5> 
-                    <img src="assets/cryptoicons/white/${crypto}.png" alt=""> </div>`);
+                li.innerHTML = (`
+                <div class='row crypto-in-watchlist'>
+                    <div class="col s6">
+                        <h4 class='crypto-name'>${crypto_names(crypto)}</h4><h5 class="${crypto}-price">$${result}</h5>
+                    </div>
+                    <div class="col s6">
+                        <img class="right" src="assets/cryptoicons/white/${crypto}.png" alt="">
+                    </div> 
+                </div>`);
             });
             ul.appendChild(li);
         });
@@ -40,6 +43,12 @@
             if(ul.children.length == 0){
                 ul.className = '';
             }
+        });
+
+        //Watchlist Reload prices
+        ipcRenderer.on('watchlist:reload', function(){
+            document.getElementsByClassName('.crypto-prices').innerHTML = 'Dankster';
+            console.log('GG')
         });
 
     </script>
