--- a/mainWindow.html
+++ b/mainWindow.html
@@ -33,7 +33,7 @@
                         <img class="right" src="assets/cryptoicons/white/${crypto}.png" alt="">
                     </div> 
                 </div>`);
-                appendtoDatabase(crypto_names(crypto), crypto, result);
+                appendtoDatabase(crypto_names(crypto), crypto);
             });
             ul.appendChild(li);
         });
