--- a/addWindow.html
+++ b/addWindow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Add a crypto to watch</title>
+    <title>Add to watchlist</title>
     <link rel="stylesheet" href="assets/css/materialize.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -23,7 +23,7 @@
                     <option value="xlm">Stellar Lumens</option>
                 </select>
             </div>
-            <button class="custom-add-button btn waves-effect waves-light" type="submit">Add</button>
+            <button id="yes" class="custom-add-button btn waves-effect waves-light" type="submit">Add</button>
         </form>
     </div>
     <script>
@@ -31,6 +31,7 @@
         const {ipcRenderer} = electron;
         const form = document.querySelector('form');
         form.addEventListener('submit', submitForm);
+        form.addEventListener('canncel', submitForm);
 
         function submitForm(e){
             e.preventDefault();
@@ -38,6 +39,13 @@
             ipcRenderer.send('check:exists', crypto);
             ipcRenderer.send('crypto:add', crypto);
         }
+        
+        // Add on enter
+        document.querySelector("body").addEventListener("keyup", event => {
+            if(event.key !== "Enter") return;
+            document.querySelector("#yes").click();
+            event.preventDefault();
+        });
     </script>
     <script>
         // Custom navbar
