Fixing the code cleaner

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" href="assets/css/materialize.min.css">
     <link rel="stylesheet" href="assets/css/crypto_types.css"> 
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="crypto_api.js" type="text/javascript">//CRYPTO API</script>
-    <script src="crypto_names.js" type="text/javascript">//CRYPTO FUNCTIONS</script> 
+    <script src="crypto_api.js" type="text/javascript"></script>
 </head>
 <body>
     <!-- All content adds to this ul-->
