Trying out new API

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/crypto_types.css"> 
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="crypto_api.js" type="text/javascript"></script>
+    <script src="coingecko_api.js"></script>
 </head>
 <body>
     <!-- All content adds to this ul-->
