--- a/mainWindow.html
+++ b/mainWindow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>GLANCE @ CRYPTO™️</title>
+    <title>GLANCE AT CRYPTO</title>
     <link rel="stylesheet" href="assets/css/materialize.min.css">
     <link rel="stylesheet" href="assets/css/crypto_types.css"> 
     <link rel="stylesheet" href="assets/css/style.css">
