Auto Updating Every 49 seconds
No gui to turn on or off the auto updater. In current state the auto updater is always on with an 40 seconds interval!

--- a/autoWindow.html
+++ b/autoWindow.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h4 style="display: block; font-size: small; color: white;">Enable Auto-Updater</h4>
+        <h4 style="display: block; font-size: small; color: white;">Auto-Updater: <span id="status">ENABLED</span></h4>
     </div>
     <div class="container">
         <button class="custom-add-button btn waves-effect waves-light" onclick="closeWindow()" id="yes">YES</button>
